--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,38 @@
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
 *.pyc
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+.cache/
+.coverage
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# Spyder
+.spyder*
+
+# Vim
 *.swp
 *.swo
-.spyder*
-scikit_aero.egg-info/*
